# workflows

./: CMakeLists.txt  CMakePresets.json  discover_tests.py  hello.hpp  report_test_results.py  requirements.txt  run_tests.py  test_metadata.py  test_stage1.cpp  test_stage2.cpp  testing_model.py
.github/actions/cmake-runner/: action.yml
.github/actions/copy-files/: action.yml
.github/actions/report-grade/: action.yml  report.py  requirements.txt
.github/actions/run-gtest/: action.yml  discover_tests.py  report_tests.py  requirements.txt  run_tests.py  test_metadata.py
.github/actions/run-gtests/: run_tests.py
.github/actions/run-webots/: action.yml
.github/workflows/: classroom.yml
protos/: epuck.proto
test/: CMakeLists.txt  test_stage1.cpp  test_stage2.cpp
worlds/: arena.wbt
